# fast-api

./: README.md
fast-api/: main.py  pyproject.toml
