[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Britton Riggs <briggs@multiweb.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.59.0"}
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
